# PhoneETL

./: .gitignore  LICENSE  README.md  gitignore.patch  main.py  pyproject.toml  remove-pyc.patch  setup.cfg
.github/workflows/: ci.yml
Modules/: __init__.py  text_utils.py
Services/: __init__.py  phone_service.py  validation_api.py
Tests/: test_csv_validation.py  test_phone_extra.py  test_phone_utils.py  test_text_utils.py
Tests/fixtures/: invalid.csv  mixed.csv  valid.csv
Utils/: __init__.py  regex_helper.py
scripts/: simulate_api_call.py
