[metadata]
name = phoneetl-modules
version = 0.1.0
description = Text utilities used by PhoneETL
long_description = file: README.md
long_description_content_type = text/markdown
author = Anson
author_email = anon@example.com
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.11

[options.packages.find]
where = .
exclude = Tests
